--- a/locales/ja/tpInitialize.json
+++ b/locales/ja/tpInitialize.json
@@ -2,7 +2,8 @@
     "initialize": {
         "label": {
 			"name" : "名前",
-			"make" : "フローの設定ファイル(config.json)を作成する"
+            "make" : "フローの設定ファイル(config.json)を作成する",
+            "connect" : "外部からの接続を許可する"
 		},
         "status": {
             "started": "TP起動済",
