ver1.2.0 ・ボードF/W update機能追加 ・Groveセンサ制御用のノード追加   - RGBバックライト液晶モジュール   - I2C タッチセンサ   - Grove:ジェスチャー   - I2C カラーセンサ ・I2C動作安定化 ・#22動作安定化 ・#16動作安定化 ・その他細かい修正

--- a/locales/en-US/tpInitialize.json
+++ b/locales/en-US/tpInitialize.json
@@ -7,7 +7,9 @@
 		},
         "status": {
             "started": "TP Started",
-            "stopped": "TP Stopped"
+            "stopped": "TP Stopped",
+            "fwUpdate": "F/W updating...",
+            "fwUpdateFailed": "F/W Update failed"
         }
     }
 }
